splitted some components, created divisions table to market, searchbar to storage and paivi component for products that are going out of date

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,9 @@
   box-sizing: border-box;
   font-family: "Inter Tight", sans-serif;
 }
+
+/* Capitalizing selectfields items */
+.css-6hp17o-MuiList-root-MuiMenu-list,
+.css-1ar2bnf-MuiSelect-select-MuiInputBase-input-MuiInput-input {
+  text-transform: capitalize;
+}
