--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   align-items: center;
-  background-color: rgb(123, 123, 202);
+  background-color: rgb(214, 214, 214);
   height: 5rem;
 }
 
@@ -14,4 +14,13 @@
 h1:hover {
   cursor: pointer;
   text-decoration: underline;
+}
+
+.tab {
+  font-size: 18px;
+}
+
+.tab:hover {
+  text-decoration: underline;
+  color: #3f51b5;
 }
