--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -34,3 +34,9 @@
   text-decoration: underline;
   color: #002884;
 }
+
+.disclaimer {
+  display: flex;
+  justify-content: center;
+  margin-right: 1rem;
+}
